crates/rome_formatter/tests/specs/prettier/js/decorators/comments.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: comments.js

---
# Input
```js
var x = 100

@Hello({
  a: 'a', // Comment is in the wrong place
  // test
  b: '2'
})
class X {

}


@NgModule({
  // Imports.
  imports: [
    // Angular modules.
    BrowserModule,

    // App modules.
    CoreModule,
    SharedModule,
  ],
})
export class AppModule {}

// A
@Foo()
// B
@Bar()
// C
export class Bar{}

```

# Output
```js
var x = 100;

@Hello({
  a: 'a', // Comment is in the wrong place
  // test
  b: '2'
})
class X {

}

@NgModule({
  // Imports.
  imports: [
    // Angular modules.
    BrowserModule,

    // App modules.
    CoreModule,
    SharedModule,
  ],
})
export class AppModule {}

// A
@Foo()
// B
@Bar()
// C
export class Bar{}

```

# Errors
```
error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ comments.js:3:1
  │  
3 │ ┌ @Hello({
4 │ │   a: 'a', // Comment is in the wrong place
5 │ │   // test
6 │ │   b: '2'
7 │ │ })
  │ └──^ TypeScript only syntax

error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ comments.js:13:1
   │  
13 │ ┌ @NgModule({
14 │ │   // Imports.
15 │ │   imports: [
16 │ │     // Angular modules.
   · │
22 │ │   ],
23 │ │ })
   │ └──^ TypeScript only syntax

error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ comments.js:27:1
   │
27 │ @Foo()
   │ ^^^^^^ TypeScript only syntax

error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ comments.js:29:1
   │
29 │ @Bar()
   │ ^^^^^^ TypeScript only syntax


```


